# libidk

./: CMakeLists.txt  README.md
h/libidk/: align.hpp  allocator.hpp  assert.hpp  inplace.hpp  linkedlist.hpp  log.hpp  random.hpp  service.hpp  transform.hpp
src/: ansi.hpp  assert.cpp  log.cpp
